--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:20.429106Z",
-     "start_time": "2023-06-05T05:43:20.418900Z"
+     "end_time": "2023-06-06T22:02:37.536855Z",
+     "start_time": "2023-06-06T22:02:26.159312Z"
     }
    },
    "outputs": [],
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:21.544781Z",
-     "start_time": "2023-06-05T05:43:21.479244Z"
+     "end_time": "2023-06-06T22:02:37.617329Z",
+     "start_time": "2023-06-06T22:02:37.543975Z"
     }
    },
    "outputs": [],
@@ -238,7 +238,7 @@
     "    true_attr_label[\n",
     "        true_attr_index] = 1  # true_attr_label is binary indicate whether the covaraite is \"true\"\n",
     "\n",
-    "    true_beta = np.random.uniform(low=5.0, high=6.0,\n",
+    "    true_beta = np.random.uniform(low=.5, high=.6,\n",
     "                                  size=num_true_vars) * np.random.choice(\n",
     "                                      [1., -1.], num_true_vars, replace=True)\n",
     "\n",
@@ -402,12 +402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:23.056172Z",
-     "start_time": "2023-06-05T05:43:22.537800Z"
+     "end_time": "2023-06-06T22:02:38.617814Z",
+     "start_time": "2023-06-06T22:02:37.620042Z"
     }
    },
    "outputs": [
@@ -503,12 +503,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:26.836147Z",
-     "start_time": "2023-06-05T05:43:26.798985Z"
+     "end_time": "2023-06-06T22:02:38.658164Z",
+     "start_time": "2023-06-06T22:02:38.619466Z"
     }
    },
    "outputs": [],
@@ -768,12 +768,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:27.447888Z",
-     "start_time": "2023-06-05T05:43:27.443790Z"
+     "end_time": "2023-06-06T22:02:38.660607Z",
+     "start_time": "2023-06-06T22:02:38.659346Z"
     }
    },
    "outputs": [],
@@ -797,12 +797,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:28.437481Z",
-     "start_time": "2023-06-05T05:43:28.432022Z"
+     "end_time": "2023-06-06T22:02:38.663027Z",
+     "start_time": "2023-06-06T22:02:38.661375Z"
     }
    },
    "outputs": [],
@@ -848,12 +848,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:29.370949Z",
-     "start_time": "2023-06-05T05:43:29.365878Z"
+     "end_time": "2023-06-06T22:02:38.665301Z",
+     "start_time": "2023-06-06T22:02:38.663865Z"
     }
    },
    "outputs": [],
@@ -898,12 +898,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:30.418785Z",
-     "start_time": "2023-06-05T05:43:30.401860Z"
+     "end_time": "2023-06-06T22:02:38.673085Z",
+     "start_time": "2023-06-06T22:02:38.666145Z"
     }
    },
    "outputs": [],
@@ -1043,12 +1043,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:32.909539Z",
-     "start_time": "2023-06-05T05:43:31.603478Z"
+     "end_time": "2023-06-06T22:02:40.151810Z",
+     "start_time": "2023-06-06T22:02:38.674153Z"
     }
    },
    "outputs": [],
@@ -1354,12 +1354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:34.107848Z",
-     "start_time": "2023-06-05T05:43:34.103527Z"
+     "end_time": "2023-06-06T22:02:40.161999Z",
+     "start_time": "2023-06-06T22:02:40.154151Z"
     }
    },
    "outputs": [],
@@ -1380,12 +1380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:36.457971Z",
-     "start_time": "2023-06-05T05:43:35.237742Z"
+     "end_time": "2023-06-06T22:02:41.682194Z",
+     "start_time": "2023-06-06T22:02:40.169589Z"
     }
    },
    "outputs": [],
@@ -1696,12 +1696,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:37.108543Z",
-     "start_time": "2023-06-05T05:43:37.104253Z"
+     "end_time": "2023-06-06T22:02:41.690842Z",
+     "start_time": "2023-06-06T22:02:41.685219Z"
     }
    },
    "outputs": [],
@@ -1724,12 +1724,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:39.612282Z",
-     "start_time": "2023-06-05T05:43:38.220875Z"
+     "end_time": "2023-06-06T22:02:43.303827Z",
+     "start_time": "2023-06-06T22:02:41.694966Z"
     }
    },
    "outputs": [
@@ -1916,12 +1916,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:47.859463Z",
-     "start_time": "2023-06-05T05:43:46.613395Z"
+     "end_time": "2023-06-06T22:02:44.632326Z",
+     "start_time": "2023-06-06T22:02:43.304738Z"
     }
    },
    "outputs": [
@@ -2115,12 +2115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:54.131190Z",
-     "start_time": "2023-06-05T05:43:53.134024Z"
+     "end_time": "2023-06-06T22:02:45.709443Z",
+     "start_time": "2023-06-06T22:02:44.633291Z"
     }
    },
    "outputs": [],
@@ -2428,12 +2428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:54.774429Z",
-     "start_time": "2023-06-05T05:43:54.770477Z"
+     "end_time": "2023-06-06T22:02:45.716905Z",
+     "start_time": "2023-06-06T22:02:45.711997Z"
     }
    },
    "outputs": [],
@@ -2459,12 +2459,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:43:56.820066Z",
-     "start_time": "2023-06-05T05:43:55.867011Z"
+     "end_time": "2023-06-06T22:02:46.755131Z",
+     "start_time": "2023-06-06T22:02:45.720059Z"
     }
    },
    "outputs": [],
@@ -2777,12 +2777,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:49:36.999524Z",
-     "start_time": "2023-06-05T05:43:57.830127Z"
+     "end_time": "2023-06-06T22:08:45.224868Z",
+     "start_time": "2023-06-06T22:02:46.758489Z"
     }
    },
    "outputs": [],
@@ -2805,12 +2805,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:49:38.060115Z",
-     "start_time": "2023-06-05T05:49:37.001893Z"
+     "end_time": "2023-06-06T22:08:46.310960Z",
+     "start_time": "2023-06-06T22:08:45.227383Z"
     }
    },
    "outputs": [
@@ -2979,12 +2979,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-05T05:49:38.958903Z",
-     "start_time": "2023-06-05T05:49:38.064069Z"
+     "end_time": "2023-06-06T22:08:47.232442Z",
+     "start_time": "2023-06-06T22:08:46.311776Z"
     }
    },
    "outputs": [
