update simulation design

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -16,8 +16,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:35.882384Z",
-     "start_time": "2023-06-07T16:51:24.847866Z"
+     "end_time": "2023-06-07T18:23:45.602779Z",
+     "start_time": "2023-06-07T18:23:44.431331Z"
     }
    },
    "outputs": [],
@@ -67,8 +67,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:35.939755Z",
-     "start_time": "2023-06-07T16:51:35.886652Z"
+     "end_time": "2023-06-07T18:23:45.653288Z",
+     "start_time": "2023-06-07T18:23:45.603916Z"
     }
    },
    "outputs": [],
@@ -248,6 +248,8 @@
     "\n",
     "    sim_data = abide[true_names].to_numpy(copy=True)\n",
     "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
+    "    sim_data = sim_data**2\n",
+    "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
     "    signal = sim_data @ true_beta\n",
     "    signal -= np.mean(\n",
     "        signal\n",
@@ -410,8 +412,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.459295Z",
-     "start_time": "2023-06-07T16:51:35.943575Z"
+     "end_time": "2023-06-07T18:23:46.123394Z",
+     "start_time": "2023-06-07T18:23:45.654292Z"
     }
    },
    "outputs": [
@@ -533,8 +535,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.498343Z",
-     "start_time": "2023-06-07T16:51:38.460551Z"
+     "end_time": "2023-06-07T18:23:46.186485Z",
+     "start_time": "2023-06-07T18:23:46.140562Z"
     }
    },
    "outputs": [],
@@ -798,8 +800,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.501683Z",
-     "start_time": "2023-06-07T16:51:38.499234Z"
+     "end_time": "2023-06-07T18:23:46.188780Z",
+     "start_time": "2023-06-07T18:23:46.187380Z"
     }
    },
    "outputs": [],
@@ -827,8 +829,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.505356Z",
-     "start_time": "2023-06-07T16:51:38.503318Z"
+     "end_time": "2023-06-07T18:23:46.191279Z",
+     "start_time": "2023-06-07T18:23:46.189580Z"
     }
    },
    "outputs": [],
@@ -878,8 +880,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.508757Z",
-     "start_time": "2023-06-07T16:51:38.506090Z"
+     "end_time": "2023-06-07T18:23:46.196126Z",
+     "start_time": "2023-06-07T18:23:46.194543Z"
     }
    },
    "outputs": [],
@@ -928,8 +930,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:38.515664Z",
-     "start_time": "2023-06-07T16:51:38.509469Z"
+     "end_time": "2023-06-07T18:23:46.204025Z",
+     "start_time": "2023-06-07T18:23:46.196998Z"
     }
    },
    "outputs": [],
@@ -1073,8 +1075,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:39.356890Z",
-     "start_time": "2023-06-07T16:51:38.516559Z"
+     "end_time": "2023-06-07T18:23:47.642493Z",
+     "start_time": "2023-06-07T18:23:46.204912Z"
     }
    },
    "outputs": [],
@@ -1384,8 +1386,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:39.370191Z",
-     "start_time": "2023-06-07T16:51:39.366848Z"
+     "end_time": "2023-06-07T18:23:47.656250Z",
+     "start_time": "2023-06-07T18:23:47.648506Z"
     }
    },
    "outputs": [],
@@ -1410,8 +1412,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:40.274319Z",
-     "start_time": "2023-06-07T16:51:39.372784Z"
+     "end_time": "2023-06-07T18:23:49.111259Z",
+     "start_time": "2023-06-07T18:23:47.660369Z"
     }
    },
    "outputs": [],
@@ -1726,8 +1728,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:40.283825Z",
-     "start_time": "2023-06-07T16:51:40.278387Z"
+     "end_time": "2023-06-07T18:23:49.118486Z",
+     "start_time": "2023-06-07T18:23:49.114447Z"
     }
    },
    "outputs": [],
@@ -1754,8 +1756,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:40.378458Z",
-     "start_time": "2023-06-07T16:51:40.285771Z"
+     "end_time": "2023-06-07T18:23:49.243042Z",
+     "start_time": "2023-06-07T18:23:49.121012Z"
     }
    },
    "outputs": [
@@ -1939,8 +1941,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:40.459092Z",
-     "start_time": "2023-06-07T16:51:40.379355Z"
+     "end_time": "2023-06-07T18:23:49.341085Z",
+     "start_time": "2023-06-07T18:23:49.244042Z"
     }
    },
    "outputs": [
@@ -2131,8 +2133,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:41.373047Z",
-     "start_time": "2023-06-07T16:51:40.460131Z"
+     "end_time": "2023-06-07T18:23:50.598072Z",
+     "start_time": "2023-06-07T18:23:49.342134Z"
     }
    },
    "outputs": [],
@@ -2444,8 +2446,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:41.381130Z",
-     "start_time": "2023-06-07T16:51:41.376129Z"
+     "end_time": "2023-06-07T18:23:50.607534Z",
+     "start_time": "2023-06-07T18:23:50.601701Z"
     }
    },
    "outputs": [],
@@ -2475,8 +2477,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:51:42.202794Z",
-     "start_time": "2023-06-07T16:51:41.384646Z"
+     "end_time": "2023-06-07T18:23:51.711768Z",
+     "start_time": "2023-06-07T18:23:50.611542Z"
     }
    },
    "outputs": [],
@@ -2793,8 +2795,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:57:30.560392Z",
-     "start_time": "2023-06-07T16:51:42.206359Z"
+     "end_time": "2023-06-07T18:29:39.971648Z",
+     "start_time": "2023-06-07T18:23:51.714298Z"
     }
    },
    "outputs": [],
@@ -2821,8 +2823,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:57:30.639600Z",
-     "start_time": "2023-06-07T16:57:30.562249Z"
+     "end_time": "2023-06-07T18:29:40.050892Z",
+     "start_time": "2023-06-07T18:29:39.973633Z"
     }
    },
    "outputs": [
@@ -2990,8 +2992,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T16:57:30.706474Z",
-     "start_time": "2023-06-07T16:57:30.640598Z"
+     "end_time": "2023-06-07T18:29:40.118476Z",
+     "start_time": "2023-06-07T18:29:40.051940Z"
     }
    },
    "outputs": [
