--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:02.327997Z",
-     "start_time": "2023-06-15T15:59:02.317001Z"
+     "end_time": "2023-06-18T14:59:08.702263Z",
+     "start_time": "2023-06-18T14:59:08.692934Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,7 @@
     "from dask import dataframe as dd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau, rankdata, norm\n",
-    "# import fastHDMI as mi\n",
+    "# import fastHDMI as mi # I comment out since I am running the Jupyter notebook on my M1 Macbook air\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
     "from sklearn.decomposition import PCA\n",
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:03.634740Z",
-     "start_time": "2023-06-15T15:59:03.569179Z"
+     "end_time": "2023-06-18T14:59:09.094465Z",
+     "start_time": "2023-06-18T14:59:09.028812Z"
     }
    },
    "outputs": [],
@@ -408,12 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:05.543999Z",
-     "start_time": "2023-06-15T15:59:04.912807Z"
+     "end_time": "2023-06-18T14:59:10.000384Z",
+     "start_time": "2023-06-18T14:59:09.342399Z"
     }
    },
    "outputs": [
@@ -495,6 +495,7 @@
     "    plt.ylabel(r'AUROC')\n",
     "    plt.xlabel(r'Number of ``True\" Covariates')\n",
     "    plt.legend()\n",
+    "    plt.savefig(\"sim_{outcome}\".format(outcome=outcome), dpi=300)\n",
     "    plt.show()"
    ]
   },
@@ -509,12 +510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:07.895024Z",
-     "start_time": "2023-06-15T15:59:07.851159Z"
+     "end_time": "2023-06-18T14:59:10.042682Z",
+     "start_time": "2023-06-18T14:59:10.002623Z"
     }
    },
    "outputs": [],
@@ -774,12 +775,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:08.720266Z",
-     "start_time": "2023-06-15T15:59:08.715540Z"
+     "end_time": "2023-06-18T14:59:10.045474Z",
+     "start_time": "2023-06-18T14:59:10.043500Z"
     }
    },
    "outputs": [],
@@ -803,12 +804,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:09.730912Z",
-     "start_time": "2023-06-15T15:59:09.726048Z"
+     "end_time": "2023-06-18T14:59:10.051861Z",
+     "start_time": "2023-06-18T14:59:10.047851Z"
     }
    },
    "outputs": [],
@@ -854,12 +855,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:10.761487Z",
-     "start_time": "2023-06-15T15:59:10.755611Z"
+     "end_time": "2023-06-18T14:59:10.438092Z",
+     "start_time": "2023-06-18T14:59:10.433615Z"
     }
    },
    "outputs": [],
@@ -904,12 +905,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:11.826890Z",
-     "start_time": "2023-06-15T15:59:11.810249Z"
+     "end_time": "2023-06-18T14:59:10.943797Z",
+     "start_time": "2023-06-18T14:59:10.925435Z"
     }
    },
    "outputs": [],
@@ -1049,12 +1050,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:14.828089Z",
-     "start_time": "2023-06-15T15:59:13.481957Z"
+     "end_time": "2023-06-18T14:59:12.558500Z",
+     "start_time": "2023-06-18T14:59:11.232062Z"
     }
    },
    "outputs": [],
@@ -1360,12 +1361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:15.527175Z",
-     "start_time": "2023-06-15T15:59:15.522650Z"
+     "end_time": "2023-06-18T14:59:12.566841Z",
+     "start_time": "2023-06-18T14:59:12.563379Z"
     }
    },
    "outputs": [],
@@ -1386,12 +1387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:17.966940Z",
-     "start_time": "2023-06-15T15:59:16.563773Z"
+     "end_time": "2023-06-18T14:59:13.971201Z",
+     "start_time": "2023-06-18T14:59:12.569987Z"
     }
    },
    "outputs": [],
@@ -1702,12 +1703,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:18.521583Z",
-     "start_time": "2023-06-15T15:59:18.516876Z"
+     "end_time": "2023-06-18T14:59:13.979085Z",
+     "start_time": "2023-06-18T14:59:13.976882Z"
     }
    },
    "outputs": [],
@@ -1730,12 +1731,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:21.819882Z",
-     "start_time": "2023-06-15T15:59:19.497321Z"
+     "end_time": "2023-06-18T14:59:15.673499Z",
+     "start_time": "2023-06-18T14:59:13.981118Z"
     }
    },
    "outputs": [
@@ -1923,12 +1924,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:28.214814Z",
-     "start_time": "2023-06-15T15:59:26.042316Z"
+     "end_time": "2023-06-18T14:59:17.177480Z",
+     "start_time": "2023-06-18T14:59:15.674902Z"
     }
    },
    "outputs": [
@@ -2123,12 +2124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:29.140793Z",
-     "start_time": "2023-06-15T15:59:28.216600Z"
+     "end_time": "2023-06-18T14:59:18.240482Z",
+     "start_time": "2023-06-18T14:59:17.178651Z"
     }
    },
    "outputs": [],
@@ -2436,12 +2437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:30.303353Z",
-     "start_time": "2023-06-15T15:59:30.299209Z"
+     "end_time": "2023-06-18T14:59:18.247211Z",
+     "start_time": "2023-06-18T14:59:18.244003Z"
     }
    },
    "outputs": [],
@@ -2467,12 +2468,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T15:59:32.428803Z",
-     "start_time": "2023-06-15T15:59:31.424150Z"
+     "end_time": "2023-06-18T14:59:19.241472Z",
+     "start_time": "2023-06-18T14:59:18.251460Z"
     }
    },
    "outputs": [],
@@ -2785,12 +2786,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T16:08:45.959025Z",
-     "start_time": "2023-06-15T15:59:32.432620Z"
+     "end_time": "2023-06-18T15:05:07.463461Z",
+     "start_time": "2023-06-18T14:59:19.246799Z"
     }
    },
    "outputs": [],
@@ -2813,12 +2814,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T16:08:47.477966Z",
-     "start_time": "2023-06-15T16:08:45.961528Z"
+     "end_time": "2023-06-18T15:05:08.554167Z",
+     "start_time": "2023-06-18T15:05:07.465984Z"
     }
    },
    "outputs": [
@@ -2987,12 +2988,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-15T16:08:48.769669Z",
-     "start_time": "2023-06-15T16:08:47.479115Z"
+     "end_time": "2023-06-18T15:05:09.499538Z",
+     "start_time": "2023-06-18T15:05:08.555496Z"
     }
    },
    "outputs": [
