fixing the plot names

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -16,8 +16,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:01.237631Z",
-     "start_time": "2023-06-30T15:15:59.887636Z"
+     "end_time": "2023-06-30T16:18:07.930974Z",
+     "start_time": "2023-06-30T16:18:05.799324Z"
     }
    },
    "outputs": [],
@@ -69,8 +69,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:01.292782Z",
-     "start_time": "2023-06-30T15:16:01.239558Z"
+     "end_time": "2023-06-30T16:18:07.989929Z",
+     "start_time": "2023-06-30T16:18:07.932805Z"
     }
    },
    "outputs": [],
@@ -414,8 +414,8 @@
    "id": "a46b12ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:01.342419Z",
-     "start_time": "2023-06-30T15:16:01.294004Z"
+     "end_time": "2023-06-30T16:18:08.102724Z",
+     "start_time": "2023-06-30T16:18:07.991042Z"
     }
    },
    "outputs": [],
@@ -755,8 +755,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:03.471610Z",
-     "start_time": "2023-06-30T15:16:01.343786Z"
+     "end_time": "2023-06-30T16:18:10.185062Z",
+     "start_time": "2023-06-30T16:18:08.104238Z"
     }
    },
    "outputs": [
@@ -852,8 +852,8 @@
     "    plt.ylabel(r'AUROC')\n",
     "    plt.xlabel(r'Number of ``True\" Covariates')\n",
     "    plt.legend()\n",
-    "    plt.savefig(\n",
-    "        r\"./ABIDE_simulations_nonlinear/sim_{outcome}\".format(outcome=outcome),\n",
+    "    plt.savefig(r\"./ABIDE_simulations_nonlinear/sim_{outcome}.eps\".format(\n",
+    "        outcome=outcome),\n",
     "        format=\"eps\",\n",
     "        dpi=600)\n",
     "    plt.show()"
@@ -865,8 +865,8 @@
    "id": "474bcbf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.264549Z",
-     "start_time": "2023-06-30T15:16:03.472762Z"
+     "end_time": "2023-06-30T16:18:11.771931Z",
+     "start_time": "2023-06-30T16:18:10.186692Z"
     }
    },
    "outputs": [
@@ -962,8 +962,8 @@
     "    plt.ylabel(r'AUROC')\n",
     "    plt.xlabel(r'Number of ``True\" Covariates')\n",
     "    plt.legend()\n",
-    "    plt.savefig(\n",
-    "        r\"./ABIDE_simulations_linear/sim_{outcome}\".format(outcome=outcome),\n",
+    "    plt.savefig(r\"./ABIDE_simulations_linear/sim_{outcome}.eps\".format(\n",
+    "        outcome=outcome),\n",
     "        format=\"eps\",\n",
     "        dpi=600)\n",
     "    plt.show()"
@@ -984,8 +984,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.298414Z",
-     "start_time": "2023-06-30T15:16:05.265475Z"
+     "end_time": "2023-06-30T16:18:11.823612Z",
+     "start_time": "2023-06-30T16:18:11.781740Z"
     }
    },
    "outputs": [],
@@ -1249,8 +1249,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.300928Z",
-     "start_time": "2023-06-30T15:16:05.299317Z"
+     "end_time": "2023-06-30T16:18:11.826035Z",
+     "start_time": "2023-06-30T16:18:11.824571Z"
     }
    },
    "outputs": [],
@@ -1278,8 +1278,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.304977Z",
-     "start_time": "2023-06-30T15:16:05.302035Z"
+     "end_time": "2023-06-30T16:18:11.828919Z",
+     "start_time": "2023-06-30T16:18:11.826989Z"
     }
    },
    "outputs": [],
@@ -1329,8 +1329,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.314122Z",
-     "start_time": "2023-06-30T15:16:05.308222Z"
+     "end_time": "2023-06-30T16:18:11.831297Z",
+     "start_time": "2023-06-30T16:18:11.829749Z"
     }
    },
    "outputs": [],
@@ -1379,8 +1379,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.325195Z",
-     "start_time": "2023-06-30T15:16:05.317069Z"
+     "end_time": "2023-06-30T16:18:11.839866Z",
+     "start_time": "2023-06-30T16:18:11.832143Z"
     }
    },
    "outputs": [],
@@ -1501,7 +1501,7 @@
     "        plt.xlabel(colname)\n",
     "        plt.title(r\"scatter plot for outcome vs the top associated covariates: \" + outcome +\n",
     "                  r\" and \" + colname)\n",
-    "        plt.savefig(r\"scatter_\" + outcome + r\"_\" + colname, format=\"eps\", dpi=600)\n",
+    "        plt.savefig(r\"scatter_\" + outcome + r\"_\" + colname + \".eps\", format=\"eps\", dpi=600)\n",
     "        plt.close()\n",
     "    \"\"\")\n",
     "\n",
@@ -1524,8 +1524,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.868760Z",
-     "start_time": "2023-06-30T15:16:05.328022Z"
+     "end_time": "2023-06-30T16:18:13.178850Z",
+     "start_time": "2023-06-30T16:18:11.842397Z"
     }
    },
    "outputs": [],
@@ -1835,8 +1835,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:05.873525Z",
-     "start_time": "2023-06-30T15:16:05.870756Z"
+     "end_time": "2023-06-30T16:18:13.186582Z",
+     "start_time": "2023-06-30T16:18:13.182410Z"
     }
    },
    "outputs": [],
@@ -1861,8 +1861,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:06.540943Z",
-     "start_time": "2023-06-30T15:16:05.875449Z"
+     "end_time": "2023-06-30T16:18:14.474809Z",
+     "start_time": "2023-06-30T16:18:13.189360Z"
     }
    },
    "outputs": [],
@@ -2177,8 +2177,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:06.546464Z",
-     "start_time": "2023-06-30T15:16:06.542846Z"
+     "end_time": "2023-06-30T16:18:14.482703Z",
+     "start_time": "2023-06-30T16:18:14.477102Z"
     }
    },
    "outputs": [],
@@ -2205,8 +2205,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:09.383807Z",
-     "start_time": "2023-06-30T15:16:06.548460Z"
+     "end_time": "2023-06-30T16:18:17.306348Z",
+     "start_time": "2023-06-30T16:18:14.484638Z"
     }
    },
    "outputs": [
@@ -2372,7 +2372,8 @@
     "    ]:\n",
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
-    "            plt.savefig(r\"./ABIDE_predict_age/\" + fun_name + dep_measure,\n",
+    "            plt.savefig(r\"./ABIDE_predict_age/\" + fun_name + dep_measure +\n",
+    "                        \".eps\",\n",
     "                        format=\"eps\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -2392,8 +2393,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:12.146091Z",
-     "start_time": "2023-06-30T15:16:09.384850Z"
+     "end_time": "2023-06-30T16:18:20.097236Z",
+     "start_time": "2023-06-30T16:18:17.307391Z"
     }
    },
    "outputs": [
@@ -2560,7 +2561,8 @@
     "    ]:\n",
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
-    "            plt.savefig(r\"./ABIDE_poly3_predict_age/\" + fun_name + dep_measure,\n",
+    "            plt.savefig(r\"./ABIDE_poly3_predict_age/\" + fun_name +\n",
+    "                        dep_measure + \".eps\",\n",
     "                        format=\"eps\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -2586,8 +2588,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:12.785347Z",
-     "start_time": "2023-06-30T15:16:12.147188Z"
+     "end_time": "2023-06-30T16:18:21.037209Z",
+     "start_time": "2023-06-30T16:18:20.098417Z"
     }
    },
    "outputs": [],
@@ -2899,8 +2901,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:12.796479Z",
-     "start_time": "2023-06-30T15:16:12.788443Z"
+     "end_time": "2023-06-30T16:18:21.045401Z",
+     "start_time": "2023-06-30T16:18:21.041585Z"
     }
    },
    "outputs": [],
@@ -2930,8 +2932,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:16:13.452579Z",
-     "start_time": "2023-06-30T15:16:12.804339Z"
+     "end_time": "2023-06-30T16:18:22.023780Z",
+     "start_time": "2023-06-30T16:18:21.048208Z"
     }
    },
    "outputs": [],
@@ -3248,8 +3250,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:21:58.363441Z",
-     "start_time": "2023-06-30T15:16:13.454364Z"
+     "end_time": "2023-06-30T16:24:22.161894Z",
+     "start_time": "2023-06-30T16:18:22.026157Z"
     }
    },
    "outputs": [],
@@ -3276,8 +3278,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:22:00.513043Z",
-     "start_time": "2023-06-30T15:21:58.365374Z"
+     "end_time": "2023-06-30T16:24:24.409166Z",
+     "start_time": "2023-06-30T16:24:22.163801Z"
     }
    },
    "outputs": [
@@ -3427,7 +3429,8 @@
     "    ]:\n",
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
-    "            plt.savefig(r\"./ABIDE_predict_diagnosis/\" + fun_name + dep_measure,\n",
+    "            plt.savefig(r\"./ABIDE_predict_diagnosis/\" + fun_name +\n",
+    "                        dep_measure + \".eps\",\n",
     "                        format=\"eps\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -3447,8 +3450,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-30T15:22:02.665134Z",
-     "start_time": "2023-06-30T15:22:00.514090Z"
+     "end_time": "2023-06-30T16:24:26.575053Z",
+     "start_time": "2023-06-30T16:24:24.410390Z"
     }
    },
    "outputs": [
@@ -3597,7 +3600,7 @@
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
     "            plt.savefig(r\"./ABIDE_poly3_predict_diagnosis/\" + fun_name +\n",
-    "                        dep_measure,\n",
+    "                        dep_measure + \".eps\",\n",
     "                        format=\"eps\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
