--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Case and Simulation studies based on ABIDE data\n",
     "## Kai Yang\n",
-    "## Questions? [click here to email me at: kai.yang2@mail.mcgill.ca](mailto:kai.yang2@mail.mcgill.ca)"
+    "## <kai.yang2 \"at\" mail.mcgill.ca>\n",
+    "## License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)\n",
+    "## [GPG Public key Fingerprint: CC02CF153594774CF956691492B2600D18170329](https://keys.openpgp.org/vks/v1/by-fingerprint/CC02CF153594774CF956691492B2600D18170329)"
    ]
   },
   {
@@ -3812,7 +3814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
