--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dddbce4a",
+   "metadata": {},
+   "source": [
+    "## Kai Yang\n",
+    "## <kai.yang2 \"at\" mail.mcgill.ca>\n",
+    "## License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)\n",
+    "## [GPG Public key Fingerprint: CC02CF153594774CF956691492B2600D18170329](https://keys.openpgp.org/vks/v1/by-fingerprint/CC02CF153594774CF956691492B2600D18170329)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f1cc105c",
@@ -4482,7 +4493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
